# thermondo

./: .env.dist  .gitignore  .style.yapf  .yapfignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
.bin/: install.sh
core/: apps.py  models.py
core/management/commands/: setup.py
notes/: apps.py  models.py  serializers.py  urls.py  views.py
notes/migrations/: 0001_initial.py
notes/tests/: factories.py  test_views.py
resources/: Thermondo.postman_collection.json
service/: asgi.py  urls.py
settings/: base.py
testing/: base.py  factories.py
users/: apps.py  auth.py  errors.py  serializers.py  urls.py  views.py
users/tests/: factories.py  test_auth.py  test_serializers.py
